окончательно исправлена практика3

--- a/KlassWork/Practica3.css
+++ b/KlassWork/Practica3.css
@@ -8,6 +8,8 @@
 }
 .sFormula{
     background-color: darksalmon;
+    line-height: 1.6;
+    padding: 3px 0;
 }
 .pFormula{
     text-align: center;
